fix: corrigindo bugs e preparando ambiente do conda

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,50 @@
-tape-proteins==0.5  cached-property==1.5.2  umap-learn==0.5.3  scikit-learn-intelex==2021.5.3  future==0.18.2  s3transfer==0.5.2  daal4py==2021.5.3  seaborn==0.11.2  cmappy==4.0.1  importlib-resources==5.4.0  torch==1.5.1 xdis==6.0.4  smart-open==6.2.0  click==8.0.4  pyfaidx==0.7.1  tbb==2021.6.0  botocore==1.26.10  typing-extensions==4.1.1  scikit-learn==0.24.2  gensim==3.4.0  requests==2.27.1  tensorboardx==2.5.1  boto3==1.23.10  jmespath==0.10.0  pyparsing==3.0.9  torchvision==0.6.1 urllib3==1.26.12  spark-parser==1.8.9  charset-normalizer==2.0.12  pubchempy==1.0.4  tqdm==4.64.0  h5py==3.1.0  protobuf==3.19.5  llvmlite==0.36.0  threadpoolctl==3.1.0  biopython==1.79  uncompyle6==3.8.0  joblib==1.1.0  pynndescent==0.5.7  filelock==3.4.1  untangle==1.1.1  scipy==1.5.4  daal==2021.5.3  importlib-metadata==4.8.3  zipp==3.6.0  idna==3.3  numba==0.53.1  lmdb==1.3.0  gevent==1.1rc4 gseapy==0.12.0
+tape-proteins==0.5
+cached-property==1.5.2
+umap-learn==0.5.3
+scikit-learn-intelex==2021.5.3
+future==0.18.2
+s3transfer==0.5.2
+daal4py==2021.5.3
+seaborn==0.11.2
+cmappy==4.0.1
+importlib-resources==5.4.0
+torch==1.5.1
+xdis==6.0.4
+smart-open==6.2.0
+click==8.0.4
+pyfaidx==0.7.1
+tbb==2021.6.0
+botocore==1.26.10
+typing-extensions==4.1.1
+scikit-learn==0.24.2
+gensim==3.4.0
+requests==2.27.1
+tensorboardx==2.5.1
+boto3==1.23.10
+jmespath==0.10.0
+pyparsing==3.0.9
+torchvision==0.6.1
+urllib3==1.26.12
+spark-parser==1.8.9
+charset-normalizer==2.0.12
+pubchempy==1.0.4
+tqdm==4.64.0
+h5py==3.1.0
+protobuf==3.19.5
+llvmlite==0.36.0
+threadpoolctl==3.1.0
+biopython==1.79
+uncompyle6==3.8.0
+joblib==1.1.0
+pynndescent==0.5.7
+filelock==3.4.1
+untangle==1.1.1
+scipy==1.5.4
+daal==2021.5.3
+importlib-metadata==4.8.3
+zipp==3.6.0
+idna==3.3
+numba==0.53.1
+lmdb==1.3.0
+gevent==1.1rc4
+gseapy==0.12.0
