--- a/environment.yml
+++ b/environment.yml
@@ -139,7 +139,7 @@ dependencies:
     - matplotlib-base=3.3.4=py36h62a2d02_0
     - certifi=2021.5.30=py36h06a4308_0
     - c-ares=1.18.1=h7f98852_0
-    - python=3.6.13=h12debd9_1
+    - python=3.9.13
     - libgfortran-ng=11.2.0=h00389a5_1
     - jsonschema=3.0.2=py36_0
     - wrapt=1.12.1=py36h8f6f2f9_3
@@ -204,7 +204,6 @@ dependencies:
         - seaborn==0.11.2
         - cmappy==4.0.1
         - importlib-resources==5.4.0
-        - torch==1.5.1
         - xdis==6.0.4
         - smart-open==6.2.0
         - click==8.0.4
@@ -219,7 +218,6 @@ dependencies:
         - boto3==1.23.10
         - jmespath==0.10.0
         - pyparsing==3.0.9
-        - torchvision==0.6.1
         - urllib3==1.26.12
         - spark-parser==1.8.9
         - charset-normalizer==2.0.12
